welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:19: error: value update is not a member of String
litMessage() = decalage
^